--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,30 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Python / backend
+backend/__pycache__/
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
 
-node_modules
-dist
-dist-ssr
-*.local
+# Python tooling / tests
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage
+htmlcov/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Virtual environments
+.venv/
+venv/
+env/
+env.bak/
+venv.bak/
+
+# OS files
+Thumbs.db
+desktop.ini
+
+# Build / misc
+build/
+coverage/
+tmp/
+temp/
